--- a/examples/log_a_javascript_object/package.json
+++ b/examples/log_a_javascript_object/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "hello_world_colorize",
+  "name": "log_a_javascript_object",
   "version": "1.0.0",
   "description": "",
   "main": "./dist/index.js",
@@ -17,7 +17,6 @@
     "node": ">=18.18.0"
   },
   "dependencies": {
-    "chalk": "^5.6.2",
     "streams-logger": "^3.0.0"
   },
   "type": "module",
