--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,15 +1,13 @@
 {
   "compilerOptions": {
     "lib": ["es2022"],
-    "module": "Node16",
+    "module": "node16",
     "target": "es2022",
     "strict": true,
     "esModuleInterop": true,
     "skipLibCheck": false,
     "forceConsistentCasingInFileNames": true,
-    "moduleResolution": "Node16",
     "outDir": "./dist",
-    "rootDir": "./src",
     "declaration": true
   },
   "include": ["src/**/*"]
